<resources>
    <string name="app_name">Submission Alfan</string>

    <string name="main_title">Github User</string>
    <string name="detail_title">Detail User</string>

    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="location">Location</string>
    <string name="repository">Repository</string>
    <string name="company">Company</string>

    <string name="value">0</string>
    <string name="hint_text">Type username here..</string>
    <string name="guide">You have not searched for Github User!</string>
    <string name="nobody">No User!</string>
    <string name="no_repos">No Repository!</string>
    <string name="title_activity_favorite">FavoriteActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_favorite_activite">FavoriteActivite</string>
    <string name="favorite_tittle">Favorite User List</string>

</resources>