<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/general"
    style="@style/GeneralBackground"
    tools:context=".ui.activity.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/title_main_header"
            style="@style/TextTitle"
            android:text="@string/main_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/search_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="28dp"
            android:src="@drawable/ic_baseline_person_search_24"
            app:layout_constraintBottom_toBottomOf="@+id/title_main_header"
            app:layout_constraintStart_toEndOf="@+id/title_main_header"
            app:layout_constraintTop_toTopOf="@+id/title_main_header"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="ContentDescription" />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_edit_text"
            style="?attr/searchViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/dark_cyan"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/search_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:queryHint="@string/hint_text" />

        <ImageView
            android:id="@+id/action_setting"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="5dp"
            android:src="@drawable/ic_sharp_app_settings_alt_24"
            app:layout_constraintStart_toEndOf="@+id/search_button"
            app:layout_constraintTop_toTopOf="@+id/search_button"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:id="@+id/favorite"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_marginStart="5dp"
            android:background="@color/dark_cyan"
            android:src="@drawable/ic_baseline_favorite_24"
            app:layout_constraintBottom_toBottomOf="@+id/action_setting"
            app:layout_constraintStart_toEndOf="@+id/action_setting"
            app:layout_constraintTop_toTopOf="@+id/action_setting" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_user_github"
        style="@style/RecyclerView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/list_user_github" />

    <ImageView
        android:id="@+id/unknown_image"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginTop="236dp"
        android:src="@drawable/ic_baseline_person_search_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/unknown_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/guide"
        android:textColor="@color/cyan"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/unknown_image"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="@+id/unknown_image"
        app:layout_constraintTop_toBottomOf="@+id/unknown_image" />

    <ProgressBar
        android:id="@+id/search_progress_bar"
        style="?attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>